--- a/index.html
+++ b/index.html
@@ -6,7 +6,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Profile Page</title>
     <link rel = "stylesheet" href = "style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 
 </head>
+
+<body>
+    <div class="logotext">
+            Profile Page
+    </div>
+
+    <div class="text">
+        <div class="text-primary text-opacity-75">
+
+                Name: Janghyun Kim<br>
+                Email: janghyun0402@g.skku.edu<br><br>
+        </div>
+    </div>
+
+    <div class="p-3 mb-2 bg-info text-dark">
+    <h3>
+        Education<br>
+    </h3>
+        <table class="table table-bordered">
+            <thead class="table-dark">
+                <td>School</td>
+                <td>Period</td>
+            </thead>
+            <tbody>
+                <h2>
+                <tr>
+                    <td>Busan Jungang Middle School</td>
+                    <td>2014.03 ~ 2017.02</td>
+                </tr>
+                <tr>
+                    <td>Dongnae High School</td>
+                    <td>2017.03 ~ 2020.02</td>
+                </tr>
+                <tr>
+                    <td>Sungkyunkwan University</td>
+                    <td>2020.03 ~ present</td>
+                </tr>
+                </h2>
+            </tbody>
+        </table>
+    
+    </div>
+        <br>
+        <div class="bg-success p-2 text-dark bg-opacity-25">
+            <h3>Links<br></h3>
+            <h4>
+                <ul>
+                    <li><a href="https://icampus.skku.edu/">SKKU I-Campus</a></li>
+                    <li><a href="https://github.com/janghyun0402">My Github</a></li>
+                </ul>
+            </h4>
+        </div>
+    <br>
+
+    <h3>
+        Hobby
+    </h3>
+    <div class="hstack gap-3">
+        <span style="font-size:1.5em">
+        <div class="bg-light border">Watch movies</div>
+        <div class="bg-light border">Playing games</div>
+        <div class="bg-light border">Trip</div>
+        </span>
+    </div>
+    <br>
+
+    <h3>
+        Favorite Place
+    </h3>
+
+    <h4>
+    <figure class="figure">
+        <img src="photo.png" class="figure-img img-fluid rounded" width="400" alt="">
+        <figcaption class="figure-caption">Han River</figcaption>
+    </figure>
+    </h4>
+    <br>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+
+
+</body>
 
 </html>
