--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <h4>
     <figure class="figure">
-        <img src="photo.png" class="figure-img img-fluid rounded" width="400" alt="">
+        <img src="photo.png" class="img-thumbnail" width="400" alt="">
         <figcaption class="figure-caption">Han River</figcaption>
     </figure>
     </h4>
